@startuml diagramStudylink

JpaRepository<|--PostDao
PostDto <.. PostController
PostCreationDto <.. PostController
PostService <-- PostController
Post <.. PostService
PostRepository <-- PostService
' PostEntity <.. PostDao
PostEntity <.. PostRepository
PostDao <-- PostRepository 
PostController <.. StudylinkApplication


class PostCreationDto {
   -String 
   +PostCreationDto(String)
}
class PostController{
      -PostService 
      +PostController(PostService)
      +getPosts() : List<PostDto>
      +getPostById(UUID) : ResponseEntity<PostDto>
      +createPost(PostDto) : PostDto
      +deletePost(UUID) : ResponseEntity
      +updatePost(UUID,PostDto ) : ResponseEntity
   }
   
 class PostDto {
    -UUID 
    -String 
    -Date 
   +PostDto(UUID, String, Date) 
 }

 class Post{
    -UUID
    -String
    -Date
    +Post(UUID, String, Date)
    +update(Post)
 }

 class PostService{
    -PostRepository
   +PostService( PostRepository )
   +getPosts() : List<Post> 
   +getPostById(UUID) : Optional<Post>
   +createPost(Post) : Post
   +detePost(UUID) 
   +updatePost(UUID, Post)
 }

interface PostDao{

}

interface JpaRepository{

}

class PostEntity{
   -Date
   -String
   -UUID
   +PostEntity(String, Date)
}

class PostRepository{
   -PostDao
   +PostRepository( PostDao)
   +getPosts() : List<Post>
   +getPostById(UUID) : Optional<Post> 
   +createPost(Post) : Post 
   +deletePost(UUID)
   +updatePost(UUID, Post)
}

class StudylinkApplication{
   +main()
   ' +api() : Docket
}
 @endumls